5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1709_3061.log
== TEST (2019-05-02 10:07:19) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE")
	x= unid//150
	print("DROGON", x)
-- ERROR:
File "XXXX", line 6
    elif (atq=="TERRESTRE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:07:43) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE")
	x= unid//150
	print("DROGON", x)
-- ERROR:
File "XXXX", line 6
    elif (atq=="TERRESTRE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:08:48) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE")
	x= (unid//150)+1
	print("DROGON", x)
-- ERROR:
File "XXXX", line 6
    elif (atq=="TERRESTRE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:08:58) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE"):
	x= (unid//150)+1
	print("DROGON", x)
-- ERROR:
File "XXXX", line 6
    elif (atq=="TERRESTRE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:09:13) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE"):
	x= (unid//150)+1
	print("DROGON", x)
-- ERROR:
File "XXXX", line 6
    elif (atq=="TERRESTRE")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:10:33) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE"):
	x= (unid//150)+1
	print("DROGON")
	print(x)
elif (atq=="AEREO"):
	x=(unid//30)+1
	print("RHAEGAL")
	print(x)
-- OUTPUT:
RHAEGAL
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:11:56) 
-- CODE:
atq= input("qual o tipo de ataque?").upper()
unid= int(input("qual a quantidade de unidades a serem destruidas? "))

if (unid<0 or atq!="TERRESTRE" and atq!="AEREO" and atq!="MARITIMO"):
	print("Entrada invalida")
elif (atq=="TERRESTRE"):
	x= (unid//150)+1
	print("DROGON")
	print(x)
elif (atq=="AEREO"):
	x=(unid//30)+1
	print("RHAEGAL")
	print(x)
elif (atq=="MARITIMO"):
	x=(unid//40)+1
	print("VISERION")
	print(x)
-- EXECUTION TIME:
0.182499
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
